# ScumChecker

./: .gitignore  ABOUT.md  AccountCard.cs  Form1.Designer.cs  Form1.cs  Form1.resx  GitRepos.bat  LICENSE  Program.cs  QuickTileButton.cs  README.md  ScumChecker.csproj  ScumChecker.sln  build_native_scanner_dll.bat  build_onefile_minimal_exe.bat  build_scanner_native.bat  build_scumchecker_dll.bat  micro_bild.bat
Controls/: GlowButton.cs  GlowIconButton.cs  GlowNavButton.cs  GlowTileButton.cs  GradientPanel.cs  PurpleProgressBar.cs  SteamAccountCard.cs  ToolActionCard.cs  ToolTileCard.cs
Core/: ProgressInfo.cs  ScanResult.cs  Scanner.cs
Core/Modules/: HwidModule.cs  IScanModule.cs  NativeDriverMemoryModule.cs  ProcessesModule.cs  SteamAccountsModule.cs  SuspicionKeywords.cs  SuspiciousFilesModule.cs
Core/Native/: NativeScannerBridge.cs
Core/Steam/: SteamApi.cs  SteamProfileScraper.cs
Properties/: Resources.Designer.cs  Resources.resx
build_native_scanner/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  scum_native_scanner.slnx  scum_native_scanner.vcxproj  scum_native_scanner.vcxproj.filters
native_scanner/: CMakeLists.txt  DriverScanner.cpp  DriverScanner.h  FileScanner.cpp  FileScanner.h  NativeScannerApi.cpp  NativeScannerApi.h  ProcessScanner.cpp  ProcessScanner.h  RegistryScanner.cpp  RegistryScanner.h  RiskAnalyzer.cpp  RiskAnalyzer.h  ScannerShared.cpp  ScannerShared.h  SteamScanner.cpp  SteamScanner.h  rules.json
programms/: LastActivityView.cfg
(+22 files in other folders)
